--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
+    "ejs": "^3.1.5",
     "eslintrc": "^1.0.6",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
