--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,6 @@
 {
   "development": {
-    "username": "root",
-    "password": "password",
-    "database": "seriesDB",
-    "host": "127.0.0.1",
+    "use_env_variable": "SERIES_DB_URL",
     "dialect": "mysql"
   },
   "test": {
