setup tvshows association to User table.

--- a/config/config.json
+++ b/config/config.json
@@ -5,14 +5,14 @@
   },
   "test": {
     "username": "root",
-    "password": "password",
+    "password": "CuambaNiassa1",
     "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": "password",
+    "password": "CuambaNiassa1",
     "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
