Config changed for heroku

--- a/config/config.json
+++ b/config/config.json
@@ -3,6 +3,9 @@
     "use_env_variable": "SERIES_DB_URL",
     "dialect": "mysql"
   },
+  "scripts": {
+    "start": "node server.js"
+  },
   "test": {
     "username": "root",
     "password": "password",
