--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "eslintrc": "^1.0.6",
     "express": "^4.17.1",
