--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-    "use_env_variable": "JAWS_DB_URL",
+    "use_env_variable": "SERIES_DB_URL",
     "dialect": "mysql"
   },
   "test": {
